--- a/srireal/index.html
+++ b/srireal/index.html
@@ -138,11 +138,13 @@
                     <br><br>
                     <div class="details">
                         <div class="card1">
+                            <div class="photo1">
                             <img src="image2.jpeg" alt="John Doe" class="round-img">
                             <div class="info">
                                 <p>John Doe</p>
                                 <p class="additional-info">CEO of Tech Innovations</p>
                             </div>
+                        </div>
                         </div>
                         <div class="card1">
                             <img src="image3.jpeg" alt="Jane Smith" class="round-img">
