--- a/srireal/index.html
+++ b/srireal/index.html
@@ -19,7 +19,7 @@
     <div class="scrolling-bar">
         <marquee>Admissions Are Open Now...!</marquee>
     </div>
-    <nav class="navbar navbar-expand-lg navbar-light">
+    <nav id="main-nav" class="navbar navbar-expand-lg navbar-light">
         <a class="navbar-brand">
             <img src="logo.jpeg" alt="School Logo" class="d-inline-block align-top">
             <div style="display: flex;flex-direction: column;justify-content: center; align-items: center;">
@@ -30,12 +30,12 @@
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+            <span class="navbar-toggler-icon" style="width: 25px;"></span>
         </button>
         <div class="collapse navbar-collapse font-4" id="navbarNav">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item4">
-                    <a id="nav-link-home" class="btn btn-secondary">Home</a>
+                    <a class="nav-link btn btn-secondary" href="#home" id="nav-link-home">Home</a>
                 </li>
                 <li class="nav-item3">
                     <a class="nav-link btn btn-secondary" href="#curriculum">Curriculum & Co-curriculum</a>
@@ -49,9 +49,9 @@
             </ul>
         </div>
     </nav>
-    <div class="container-fluid">
+    <div class="" style="margin-top: 105px;">
         <section id="home">
-            <div class="container-fluid">
+            <div class="">
                 <div id="mainCarousel" class="carousel slide" data-ride="carousel">
                     <ol class="carousel-indicators">
                         <li data-target="#mainCarousel" data-slide-to="0" class="active"></li>
@@ -135,6 +135,7 @@
         </section>
     </div>
     <section id="alumni" class="section">
+
         <body>
             <h1 style="background-image:url('slido3.jfif');"></h1>
             <div class="section-wrapper">
@@ -218,8 +219,23 @@
             </div>
         </div>
     </section>
+    <!-- section for google maps location -->
+    <section id="location" class="section">
+        <div class="section-wrapper">
+            <div class="container1">
+                <div class="content">
+                    <div class="map">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d124079.83328507666!2d79.34410094990339!3d13.627638881887526!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a4d4b0f88620427%3A0xcf4152d1daca0cac!2sTirupati%2C%20Andhra%20Pradesh!5e0!3m2!1sen!2sin!4v1732425741899!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <footer class="pt-4 mt-md-5 pt-md-5 border-top">
         <div class="row mx-sm-5">
+            <div id="footer-img" class="col-sm-2">
+                <img src="logo.jpeg" alt="school logo" class="school-logo">
+            </div>
             <div class="col-sm-10">
                 <div class="footer-details">
                     <ul>
@@ -237,9 +253,6 @@
                         </li>
                     </ul>
                 </div>
-            </div>
-            <div id="footer-img" class="col-sm-2">
-                <img src="logo.jpeg" alt="school logo" class="school-logo">
             </div>
         </div>
         <div class="footer">
